# GoChat/com/zguiz/gochat/docs/swagger.json
@@ -22,7 +22,56 @@
         "/user/getUserList": {
             "get": {
                 "tags": [
-                    "获取所有用户"
+                    "用户模块"
+                ],
+                "summary": "查询所有用户",
+                "responses": {
+                    "200": {
+                        "description": "code\":\"users\"}",
+                        "schema": {
+                            "type": "string"
+                        }
+                    }
+                }
+            }
+        },
+        "/user/register": {
+            "post": {
+                "tags": [
+                    "用户模块"
+                ],
+                "summary": "新增用户",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "用户名",
+                        "name": "name",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "密码",
+                        "name": "password",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "确认密码",
+                        "name": "confirmPassword",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "邮件",
+                        "name": "email",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "description": "电话号码",
+                        "name": "telephone",
+                        "in": "query"
+                    }
                 ],
                 "responses": {
                     "200": {
