# GoChat/com/zguiz/gochat/router/router.go
@@ -14,5 +14,6 @@ func Router() *gin.Engine {
 	r.GET("/swagger/*any", ginSwagger.WrapHandler(swaggerFiles.Handler))
 	r.GET("/index", service.GetIndex)
 	r.GET("/user/getUserList", service.GetUserListService)
+	r.POST("/user/register", service.RegisUser)
 	return r
 }
